--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,7 +1,7 @@
 /******* Customized Bootstrap ********/
 
 $primary: #6244C5;
-$secondary: #FFC448;
+$secondary: #e9e3d8;
 $light: #FAFAFB;
 $dark: #12141D;
 
