--- a/css/style.css
+++ b/css/style.css
@@ -8,19 +8,19 @@
 .back-to-top {
     position: fixed;
     display: none;
-    right: 45px;
-    bottom: 45px;
+    right: 15px;
+    bottom: 15px;
     z-index: 99;
 }
 
 .my-6 {
-    margin-top: 6rem;
-    margin-bottom: 6rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
 }
 
 .py-6 {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
 }
 
 /*** Spinner ***/
@@ -46,27 +46,14 @@
 .btn.btn-primary,
 .btn.btn-secondary {
     color: #f5f5f5;
-    background-color: var(--primary); /* Cambia el fondo de los botones a azul */
-}
-
-.btn-square {
-    width: 38px;
-    height: 38px;
-}
-
-.btn-sm-square {
-    width: 32px;
-    height: 32px;
-}
-
-.btn-lg-square {
-    width: 48px;
-    height: 48px;
+    background-color: var(--primary);
 }
 
 .btn-square,
 .btn-sm-square,
 .btn-lg-square {
+    width: 38px;
+    height: 38px;
     padding: 0;
     display: flex;
     align-items: center;
@@ -149,13 +136,15 @@
 
 /*** Header ***/
 #home {
-    margin-bottom: 3rem; /* Reducir el margen inferior */
-    background-size: cover; /* Asegurar que la imagen de fondo cubra completamente */
-    background-position: center center; /* Centrar la imagen de fondo */
+    margin-bottom: 3rem;
+    background: url(../img/Leonardo_Diffusion_XL_Picture_an_image_that_represents_the_con_0.jpg) left top no-repeat;
+    background-color: rgb(106, 172, 243);
+    background-size: cover;
+    padding: 3rem;
 }
 
 .typed-cursor {
-    font-size: 30px;
+    font-size: 20px;
     color: var(--dark);
 }
 
@@ -172,16 +161,46 @@
     background: var(--primary);
 }
 
-.btn-play:before,
+.btn-play:before {
+    content: "";
+    position: absolute;
+    z-index: 0;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    display: block;
+    width: 60px;
+    height: 60px;
+    background: var(--primary);
+    border-radius: 100%;
+    animation: pulse-border 1500ms ease-out infinite;
+}
+
 .btn-play:after {
-    width: 40px;
-    height: 40px;
+    content: "";
+    position: absolute;
+    z-index: 1;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    display: block;
+    width: 60px;
+    height: 60px;
+    background: #FFFFFF;
+    border-radius: 100%;
+    transition: all 200ms;
 }
 
 .btn-play span {
-    border-left: 10px solid var(--primary);
-    border-top: 7px solid transparent;
-    border-bottom: 7px solid transparent;
+    display: block;
+    position: relative;
+    z-index: 3;
+    width: 0;
+    height: 0;
+    left: -1px;
+    border-left: 16px solid var(--primary);
+    border-top: 11px solid transparent;
+    border-bottom: 11px solid transparent;
 }
 
 @keyframes pulse-border {
@@ -223,13 +242,13 @@
 
 /*** About ***/
 #about .years .display-1 {
-    font-size: 10rem;
-    line-height: 9rem;
+    font-size: 6rem;
+    line-height: 5rem;
 }
 
 #about .years h5 {
-    letter-spacing: 30px;
-    margin-right: -30px;
+    letter-spacing: 15px;
+    margin-right: -15px;
 }
 
 /*** Skills ***/
@@ -320,8 +339,8 @@
 .team-item .team-text {
     position: absolute;
     left: 0;
-    right: 60px;
-    bottom: 30px;
+    right: 30px;
+    bottom: 15px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -330,7 +349,7 @@
 }
 
 .team-item:hover .team-text {
-    right: 30px;
+    right: 15px;
     opacity: 1;
 }
 
@@ -339,7 +358,7 @@
 }
 
 .team-item:hover .team-text div {
-    margin-left: 30px;
+    margin-left: 15px;
 }
 
 /*** Testimonial ***/
@@ -439,23 +458,67 @@
 }
 
 img.img-fluid {
-    background-color: transparent; /* Hace que el fondo sea transparente */
-    max-width: 100%; /* Asegura que la imagen no exceda el ancho del contenedor */
-    height: auto; /* Mantiene la proporción de la imagen */
-    display: block; /* Elimina cualquier espacio adicional debajo de la imagen */
-    margin: 0 auto; /* Centra la imagen horizontalmente */
+    background-color: transparent;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
 }
 
-MigueL ANGEL
 div.row.g-5.align-items-center {
-    background-color: white; /* Establece el fondo blanco para el contenedor */
-    padding: 20px; /* Ajusta el relleno según sea necesario */
+    background-color: white;
+    padding: 20px;
 
     img {
-        background-color: blue; /* Cambia el color de fondo de la imagen a azul */
-        max-width: 100%; /* Asegura que la imagen no exceda el ancho del contenedor */
-        height: auto; /* Mantiene la proporción de la imagen */
-        display: block; /* Elimina cualquier espacio adicional debajo de la imagen */
-        margin: 0 auto; /* Centra la imagen horizontalmente */
+        max-width: 100%;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+    }
+}
+
+/* Ajustes generales para pantallas más pequeñas */
+@media (max-width: 767.98px) {
+    #home {
+        padding: 1rem;
+    }
+
+    .btn-play {
+        padding: 12px 14px 14px 16px;
+    }
+
+    .navbar .navbar-nav .nav-link {
+        padding: 15px;
+    }
+
+    .navbar.fixed-top {
+        padding-top: 50px;
+    }
+
+    .team-item .team-text {
+        bottom: 10px;
+        right: 10px;
+    }
+
+    .testimonial-left img:nth-child(1),
+    .testimonial-right img:nth-child(3),
+    .testimonial-left img:nth-child(2),
+    .testimonial-right img:nth-child(2),
+    .testimonial-left img:nth-child(3),
+    .testimonial-right img:nth-child(1) {
+        width: 40px;
+        height: 40px;
+    }
+
+    .testimonial-carousel .owl-dot {
+        width: 20px;
+        height: 20px;
+    }
+
+    .testimonial-carousel .owl-dot::after {
+        width: 10px;
+        height: 10px;
+        top: 3px;
+        left: 3px;
     }
 }
